force-app/main/default/objects/TradeFairReport__c/TradeFairReport__c.object-meta.xml
<CustomObject>
    <label>Messebericht</label>
    <nameField>
        <displayFormat>TFR{0000000000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messeberichte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>