force-app/main/default/objects/TradeFairReport__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(Type__c=&quot;Existing Customer&quot;, 
    Contact__r.Account.ShippingStreet &amp; BR() &amp; Contact__r.Account.ShippingPostalCode &amp; &quot; &quot; &amp; Contact__r.Account.ShippingCity, 
    Lead__r.Street &amp; BR() &amp; Lead__r.PostalCode &amp; &quot; &quot; &amp; Lead__r.City 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>