force-app/main/default/objects/TradeFairReport__c/fields/ContactLeadName__c.field-meta.xml
<CustomField>
    <fullName>ContactLeadName__c</fullName>
    <formula>IF(Type__c=&quot;Existing Customer&quot;, Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName , Lead__r.FirstName &amp;&quot; &quot; &amp; Lead__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact/Lead Name</label>
    <type>Text</type>
</CustomField>