force-app/main/default/objects/TradeFairReport__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF(Type__c=&quot;Existing Customer&quot;, Contact__r.Email , Lead__r.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>