force-app/main/default/objects/TradeFairReport__c/fields/FilledBy__c.field-meta.xml
<CustomField>
    <fullName>FilledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TradeFairsReports</relationshipName>
    <type>Lookup</type>
</CustomField>