force-app/main/default/objects/TradeFairReport__c/fields/FollowUpAction__c.field-meta.xml
<CustomField>
    <fullName>FollowUpAction__c</fullName>
    <label>Follow-Up Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Quote/Offer</fullName>
            </value>
            <value>
                <fullName>Sampling</fullName>
            </value>
            <value>
                <fullName>Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>