force-app/main/default/objects/TradeFairReport__c/fields/InterestedIn__c.field-meta.xml
<CustomField>
    <fullName>InterestedIn__c</fullName>
    <label>Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Cocoa</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>