force-app/main/default/objects/TradeFairReport__c/fields/LowQualityReport__c.field-meta.xml
<CustomField>
    <fullName>LowQualityReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Quality Report</label>
    <type>Checkbox</type>
</CustomField>