force-app/main/default/objects/TradeFairReport__c/fields/OrderDetails__c.field-meta.xml
<CustomField>
    <fullName>OrderDetails__c</fullName>
    <label>Order Details</label>
    <type>TextArea</type>
</CustomField>