force-app/main/default/objects/TradeFairReport__c/fields/OtherDetailsFollowUp__c.field-meta.xml
<CustomField>
    <fullName>OtherDetailsFollowUp__c</fullName>
    <label>Other Details (Follow Up)</label>
    <type>TextArea</type>
</CustomField>