force-app/main/default/objects/TradeFairReport__c/fields/OtherDetailsInterestedIn__c.field-meta.xml
<CustomField>
    <fullName>OtherDetailsInterestedIn__c</fullName>
    <label>Other Details (Interested In)</label>
    <type>TextArea</type>
</CustomField>