force-app/main/default/objects/TradeFairReport__c/fields/OtherDetailsTypeOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>OtherDetailsTypeOfBusiness__c</fullName>
    <label>Other Details (Type Of Business)</label>
    <type>TextArea</type>
</CustomField>