force-app/main/default/objects/TradeFairReport__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF(Type__c=&quot;Existing Customer&quot;, Contact__r.Phone &amp; BR() &amp; Contact__r.MobilePhone,  Lead__r.Phone &amp; BR() &amp;  Lead__r.MobilePhone )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>