force-app/main/default/objects/TradeFairReport__c/fields/PreviousSupplier__c.field-meta.xml
<CustomField>
    <fullName>PreviousSupplier__c</fullName>
    <label>Previous Supplier</label>
    <type>TextArea</type>
</CustomField>