force-app/main/default/objects/TradeFairReport__c/fields/ReportNumber__c.field-meta.xml
<CustomField>
    <fullName>ReportNumber__c</fullName>
    <label>Report Number</label>
    <type>AutoNumber</type>
</CustomField>