force-app/main/default/objects/TradeFairReport__c/fields/SalesArea__c.field-meta.xml
<CustomField>
    <fullName>SalesArea__c</fullName>
    <label>Sales Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baden-Württemberg (H. Mangold)</fullName>
            </value>
            <value>
                <fullName>Bavaria North (C. Mitzler)</fullName>
            </value>
            <value>
                <fullName>Bavaria South (W. Thaller)</fullName>
            </value>
            <value>
                <fullName>Berlin / Brandenburg (K. Schulze)</fullName>
            </value>
            <value>
                <fullName>Export (J. Tesch)</fullName>
            </value>
            <value>
                <fullName>Hamburg / Schleswig-Holstein (K. Thestorff)</fullName>
            </value>
            <value>
                <fullName>Hesse / Rhineland-Palatinate, Saarland (T. Schröder)</fullName>
            </value>
            <value>
                <fullName>KAM (N. Stoevesand)</fullName>
            </value>
            <value>
                <fullName>Marketing (J. Tesch)</fullName>
            </value>
            <value>
                <fullName>Mecklenburg-Western Pomerania (K. Schulze)</fullName>
            </value>
            <value>
                <fullName>Lower Saxony, Kassel (R. Kämmerling)</fullName>
            </value>
            <value>
                <fullName>North Rhine-Westphalia (D. Budde)</fullName>
            </value>
            <value>
                <fullName>Saxony, Saxony-Anhalt / Thuringia (D. Henke)</fullName>
            </value>
            <value>
                <fullName>Vending (A. Weiß)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>