force-app/main/default/objects/TradeFairReport__c/fields/SalesAreaManager__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employee Who Handled the Conversation</description>
    <label>Sales Area Manager (GL)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TradeFairReports</relationshipName>
    <type>Lookup</type>
</CustomField>