force-app/main/default/objects/TradeFairReport__c/fields/SalesManager__c.field-meta.xml
<CustomField>
    <fullName>SalesManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager (VL)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TradeFairReportsSalesManager</relationshipName>
    <type>Lookup</type>
</CustomField>