force-app/main/default/objects/TradeFairReport__c/fields/SampleOrder__c.field-meta.xml
<CustomField>
    <fullName>SampleOrder__c</fullName>
    <label>Sample Order</label>
    <type>TextArea</type>
</CustomField>