force-app/main/default/objects/TradeFairReport__c/fields/TradeFair__c.field-meta.xml
<CustomField>
    <fullName>TradeFair__c</fullName>
    <label>Trade Fair</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intergastra</fullName>
                <default>true</default>
                <label>Intergastra</label>
            </value>
            <value>
                <fullName>Südback</fullName>
            </value>
            <value>
                <fullName>Internorga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>