force-app/main/default/objects/TradeFairReport__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>If(isblank(Contact__c),&quot;Prospect&quot;,&quot;Existing Customer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>