force-app/main/default/objects/TradeFairReport__c/fields/TypeOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>TypeOfBusiness__c</fullName>
    <label>Type Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Café</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>