force-app/main/default/objects/TradeFairReport__c/fields/VisitedBusiness__c.field-meta.xml
<CustomField>
    <fullName>VisitedBusiness__c</fullName>
    <label>Visited Business</label>
    <type>TextArea</type>
</CustomField>