force-app/main/default/objects/TradeFairReport__c/fields/ZipCity__c.field-meta.xml
<CustomField>
    <fullName>ZipCity__c</fullName>
    <label>Zip/City</label>
    <type>TextArea</type>
</CustomField>